sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:17: error: value trie is not a member of object Boolean
  Boolean trie = true
          ^AlgBubbleSort1:21: error: not found: value trie
      trie = false
      ^AlgBubbleSort1:18: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<- 0 to getNombreValeurs()-2)
        ^